test/io/lydia/remove/nonempty_dir.good
nonempty_dir.chpl:3: error: Directory not empty in remove with path "nonempty"
cat: nonempty: Is a directory
